Fixed css bug that didnt align the dots of the timeline

--- a/portfolio/src/pages/About/About.css
+++ b/portfolio/src/pages/About/About.css
@@ -92,7 +92,6 @@
   }
 
   .section-timeline {
-    margin-right: 5vw;             /* place it to the right */
     text-align: left;
   }
 }
@@ -196,7 +195,7 @@ img {
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     grid-template-rows: auto;
-    grid-template-columns: 1fr 180px 1fr;
+    grid-template-columns: 1fr 40px 1fr;
     grid-auto-columns: 1fr;
     padding-top: 80px;
     padding-bottom: 15px;
@@ -232,9 +231,9 @@ img {
     line-height: 1.3;
     background-color: rgba(255, 255, 255, 0.1); /* light, semi-transparent background */
     padding: 10px; /* some spacing around the text */
+    padding-right: 20px;
     border-radius: 8px; /* rounded corners for nicer look */
     backdrop-filter: blur(5px); /* optional: adds a frosted glass effect */
-    color: #fff; /* ensure text is readable */
     
 }
 
@@ -254,13 +253,13 @@ img {
 
 .timeline_progress {
     position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 3px;
-  background-color: #414141;
-  z-index: 0;
+    top: 0;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 3px;
+    background-color: #414141;
+    z-index: 0;
 }
 
 .timeline_progress-bar {
@@ -299,7 +298,7 @@ img {
 }
 
 .margin-bottom-xlarge {
-    margin-bottom: 56px;
+    padding-bottom: 56px;
 }
 
 .timeline_link {
